songplaylist/src/assets/css/App.css
.w-full{
    width:100%;
}

.h-full{
    height:100%;
}

.font-bold{
    font-weight: bold;
}

.button-rounded{
    border-radius: 5px !important;
}

.flex-col{
    flex-direction: column;
}
.flex-row{
    flex-direction: row;
}

.text-lg{
    font-size:1.3em !important;
}

.text-xl{
    font-size:1.5em;
}

.absolute{
    position: absolute;
}

.relative{
    position: relative;
}

.fixed{
    position: fixed;
}

.cursor-pointer{
    cursor:pointer;
}

.overflow-hidden{
    overflow: hidden;
}

.overflow-y-scroll{
    overflow-y: scroll;
}

.max-height-full{
    max-height: 100%;
}

.opacity-50{
    opacity: 0.5;
}


#background{
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    filter: blur(9px);
    -webkit-filter: blur(9px);
}

